# embassy-screen

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: display.rs  idisplay.rs  main.rs
